--- a/style/login.css
+++ b/style/login.css
@@ -53,6 +53,12 @@ label {
     font-size: 1.6rem;
 }
 
+span {
+    display: none;
+    font-size: 1.3em;
+    color: rgb(223, 0, 0);
+}
+
 #login {
     font-size: 1.5rem;
     border-radius: 100px;
