--- a/style/login.css
+++ b/style/login.css
@@ -1,10 +1,10 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    min-width: 1300px;
     background-color: rgb(30, 30, 30);
     color: rgb(245, 245, 245);
-    height: 100vh;
-    min-width: 2000px;
 }
 
 .container-fluid {
@@ -17,18 +17,25 @@ body {
     &>header {
         position: absolute;
         top: 0;
+        display: flex;
+        justify-content: center;
     }
 }
 
+img {
+    width: 600px;
+}
+
 .card {
-    background-color: rgb(50, 50, 50);
-    color: inherit;
-    box-shadow: 3px 4px 3px rgb(22, 22, 22);
     border: none;
     padding: 30px;
     border-radius: 25px;
-    width: 25%;
+    height: 65%;
+    width: 31%;
     aspect-ratio: 1/1;
+    color: inherit;
+    background-color: rgb(50, 50, 50);
+    box-shadow: 3px 4px 3px rgb(22, 22, 22);
 }
 
 h1 {
@@ -67,11 +74,11 @@ span {
 
 input.form-control {
     height: 40px;
-    background-color: rgb(60, 60, 60);
     border: none;
+    font-size: 1.3rem;
+    background-color: rgb(60, 60, 60);
     box-shadow: 3px 4px 3px rgb(30, 30, 30);
     color: rgb(245, 245, 245);
-    font-size: 1.3rem;
 
     &:focus {
         background-color: rgb(60, 60, 60);
@@ -89,7 +96,7 @@ input.form-control {
     }
 
     &.default:focus {
-        box-shadow: 3px 4px 3px rgb(39, 35, 0);
+        box-shadow: 3px 4px 3px rgb(35,35,35);
     }
 }
 
@@ -98,7 +105,7 @@ input.form-control {
 }
 
 #show-passord-button {
-    transform: translateX(12px);
+    transform: translateX(10px);
 }
 
 #show-password {
@@ -107,7 +114,6 @@ input.form-control {
 }
 
 #login {
-    transform: translateY(25px);
     box-shadow: 3px 4px 3px rgb(30, 30, 30);
     color: inherit;
     font-weight: bold;
@@ -116,6 +122,6 @@ input.form-control {
         background: none;
         border: 4px solid #198754;
         color: #228858;
-        box-shadow: 3px 4px 3px rgb(0, 57, 0);
+        box-shadow: 3px 4px 8px rgb(0, 30, 0);
     }
 }
