--- a/style/login.css
+++ b/style/login.css
@@ -1,127 +1,123 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    min-width: 1300px;
-    background-color: rgb(30, 30, 30);
-    color: rgb(245, 245, 245);
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  min-width: 1300px;
+  background-color: rgb(30, 30, 30);
+  color: rgb(245, 245, 245);
 }
 
 .container-fluid {
-    height: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+
+  &>header {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    &>header {
-        position: absolute;
-        top: 0;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-img {
-    width: 600px;
+    padding: 0 0 30px 0;
+  }
 }
 
 .card {
-    border: none;
-    padding: 30px;
-    border-radius: 25px;
-    height: 65%;
-    width: 31%;
-    aspect-ratio: 1/1;
-    color: inherit;
-    background-color: rgb(50, 50, 50);
-    box-shadow: 3px 4px 3px rgb(22, 22, 22);
+  border: none;
+  padding: 30px;
+  border-radius: 25px;
+  height: 65%;
+  width: 31%;
+  aspect-ratio: 1/1;
+  color: inherit;
+  background-color: rgb(50, 50, 50);
+  box-shadow: 3px 4px 3px rgb(22, 22, 22);
 }
 
 h1 {
-    font-size: 3rem;
-    text-align: center;
+  font-size: 3rem;
+  text-align: center;
 }
 
 .card-body {
-    padding: 0;
-    margin: 0;
-    gap: 15px;
+  padding: 0;
+  margin: 0;
+  gap: 15px;
 }
 
 form {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 label {
-    font-size: 1.6rem;
+  font-size: 1.6rem;
 }
 
 span {
-    display: none;
-    font-size: 1.3em;
-    color: rgb(223, 0, 0);
-    margin-left: 10px;
+  display: none;
+  font-size: 1.3em;
+  color: rgb(223, 0, 0);
+  margin-left: 10px;
 }
 
 #login {
-    font-size: 1.5rem;
-    border-radius: 100px;
+  font-size: 1.5rem;
+  border-radius: 100px;
 }
 
 input.form-control {
-    height: 40px;
-    border: none;
-    font-size: 1.3rem;
+  height: 40px;
+  border: none;
+  font-size: 1.3rem;
+  background-color: rgb(60, 60, 60);
+  box-shadow: 3px 4px 3px rgb(30, 30, 30);
+  color: rgb(245, 245, 245);
+
+  &:focus {
     background-color: rgb(60, 60, 60);
-    box-shadow: 3px 4px 3px rgb(30, 30, 30);
-    color: rgb(245, 245, 245);
+    border: none;
+    color: inherit;
+    font-size: 1.3rem;
+  }
 
-    &:focus {
-        background-color: rgb(60, 60, 60);
-        border: none;
-        color: inherit;
-        font-size: 1.3rem;
-    }
+  &.wrong:focus {
+    box-shadow: 3px 4px 3px rgb(41, 0, 0);
+  }
 
-    &.wrong:focus {
-        box-shadow: 3px 4px 3px rgb(41, 0, 0);
-    }
+  &.right:focus {
+    box-shadow: 3px 4px 3px rgb(0, 41, 7);
+  }
 
-    &.right:focus {
-        box-shadow: 3px 4px 3px rgb(0, 41, 7);
-    }
-
-    &.default:focus {
-        box-shadow: 3px 4px 3px rgb(35,35,35);
-    }
+  &.default:focus {
+    box-shadow: 3px 4px 3px rgb(35, 35, 35);
+  }
 }
 
 #forgot-password {
-    transform: translateX(5px);
+  transform: translateX(5px);
 }
 
 #show-passord-button {
-    transform: translateX(10px);
+  transform: translateX(10px);
 }
 
 #show-password {
-    display: inline-block;
-    transform: scale(1.7) translateY(-1px) translateX(-1px);
+  display: inline-block;
+  transform: scale(1.7) translateY(-1px) translateX(-1px);
 }
 
 #login {
-    box-shadow: 3px 4px 3px rgb(30, 30, 30);
-    color: inherit;
-    font-weight: bold;
+  box-shadow: 3px 4px 3px rgb(30, 30, 30);
+  color: inherit;
+  font-weight: bold;
 
-    &:hover {
-        background: none;
-        border: 4px solid #198754;
-        color: #228858;
-        box-shadow: 3px 4px 8px rgb(0, 30, 0);
-    }
+  &:hover {
+    background: none;
+    border: 4px solid #198754;
+    color: #228858;
+    box-shadow: 3px 4px 8px rgb(0, 30, 0);
+  }
 }
